<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Menu"
            android:textColor="@color/main_color_2"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/Przystawki"
                android:textColor="@color/main_color_1"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgPrzystawki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Tatar" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kaczka" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ser" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWynik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zupy"
                android:textColor="@color/main_color_1"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgZupy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rosół" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/barszcz" />

                <RadioButton
                    android:id="@+id/radioButton18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zupa" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dodaki"
                android:textColor="@color/main_color_1"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgDodatki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RadioButton
                    android:id="@+id/radioButton19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ryz" />

                <RadioButton
                    android:id="@+id/radioButton20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kasza" />

                <RadioButton
                    android:id="@+id/radioButton21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opiekane" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btZapisz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:text="Zapisz"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btZaladuj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:text="Załaduj"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btWyczysc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:text="Wyczyść"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>